# collision

./: Cargo.toml  clean  makefile
src/: bgjk.rs  main.rs
